# zitadel-hasura-poc

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
frontend/: index.html
hasura/metadata/databases/: databases.yaml
hasura/metadata/databases/default/tables/: public_branches.yaml  public_user_active_roles.yaml  public_user_branch_roles.yaml  public_users.yaml
kratos/: identity.schema.json  kratos.yml
nginx/: zitadel-proxy.conf
postgres/: init.sql
rauthy/: config.toml
role-validator/: Dockerfile  package.json
role-validator/src/: index.js
scripts/: package-lock.json  package.json  setup-hasura.js  setup-kratos.js  setup-rauthy.js  setup-zitadel.js
security-proxy/: Cargo.toml  Dockerfile
security-proxy/src/: config.rs  db.rs  error.rs  idp.rs  jwt.rs  kratos.rs  main.rs  oidc_state.rs  recovery.rs  session.rs  state.rs  zitadel.rs
security-proxy/src/routes/: auth.rs  graphql.rs  jwks.rs  mod.rs
zitadel/: action.js
