[package]
name = "security-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "security-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["postgres", "uuid", "time", "runtime-tokio-native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
tower-cookies = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
dashmap = "5"
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
